--- a/BUILD.gn
+++ b/BUILD.gn
@@ -14,70 +14,67 @@
 import("//build/lite/config/component/lite_component.gni")
 
 if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
-    lite_library("dmslite") {
-        target_type = "shared_library"
+  lite_library("dmslite") {
+    target_type = "shared_library"
 
-        cflags = ["-Wall"]
-        cflags_cc = cflags
+    cflags = [ "-Wall" ]
+    cflags_cc = cflags
 
-        defines = [
-            "_GNU_SOURCE",
-            "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
-        ]
+    defines = [
+      "_GNU_SOURCE",
+      "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
+    ]
 
-        sources = [
-            "source/distributed_schedule_service.c",
-            "source/dmslite.c",
-            "source/dmslite_famgr.c",
-            "source/dmslite_msg_parser.c",
-            "source/dmslite_tlv_common.c",
-            "source/dmslite_session.c",
-            "source/dmslite_check_remote_permission.c"
-        ]
+    sources = [
+      "source/distributed_schedule_service.c",
+      "source/dmslite.c",
+      "source/dmslite_check_remote_permission.c",
+      "source/dmslite_famgr.c",
+      "source/dmslite_msg_parser.c",
+      "source/dmslite_session.c",
+      "source/dmslite_tlv_common.c",
+    ]
 
-        include_dirs = [
-            "include",
-            "//foundation/distributedschedule/interfaces/innerkits/samgr_lite",
-            "//foundation/distributedschedule/interfaces/kits/samgr_lite/samgr",
-            "//foundation/aafwk/interfaces/innerkits/abilitymgr_lite",
-            "//foundation/distributedschedule/interfaces/kits/samgr_lite/registry",
-            "//foundation/communication/interfaces/kits/softbus_lite/transport",
-            "//foundation/communication/interfaces/kits/softbus_lite/discovery",
-            "//foundation/aafwk/interfaces/kits/ability_lite",
-            "//foundation/aafwk/interfaces/kits/want_lite",
-            "//foundation/appexecfwk/interfaces/kits/bundle_lite",
-            "//foundation/appexecfwk/interfaces/innerkits/bundlemgr_lite",
-            "//kernel/liteos_a/kernel/include",
-            "//kernel/liteos_a/kernel/common",
-            "//third_party/bounds_checking_function/include",
-            "//third_party/cJSON",
-            "//utils/native/lite/include",
-        ]
+    include_dirs = [
+      "include",
+      "//foundation/distributedschedule/samgr_lite/interfaces/innerkits",
+      "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
+      "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
+      "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
+      "//foundation/communication/softbus_lite/interfaces/kits/transport",
+      "//foundation/communication/softbus_lite/interfaces/kits/discovery",
+      "${aafwk_lite_path}/interfaces/kits/ability_lite",
+      "${aafwk_lite_path}/interfaces/kits/want_lite",
+      "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
+      "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",
+      "//kernel/liteos_a/kernel/include",
+      "//kernel/liteos_a/kernel/common",
+      "//third_party/bounds_checking_function/include",
+      "//third_party/cJSON",
+      "//utils/native/lite/include",
+    ]
 
-        deps = [
-        ]
+    deps = []
 
-        public_deps = [
-            "//base/hiviewdfx/frameworks/hilog_lite/featured:hilog_shared",
-            "//base/security/frameworks/huks_lite/source:huks",
-            "//foundation/distributedschedule/services/samgr_lite/samgr:samgr",
-            "//foundation/communication/services/softbus_lite:softbus_lite",
-            "//third_party/bounds_checking_function:libsec_shared",
-            "//foundation/aafwk/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
-        ]
-    }
+    public_deps = [
+      "${aafwk_lite_path}/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
+      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
+      "//base/security/huks/frameworks/huks_lite/source:huks",
+      "//foundation/communication/softbus_lite:softbus",
+      "//foundation/distributedschedule/samgr_lite/samgr:samgr",
+      "//third_party/bounds_checking_function:libsec_shared",
+    ]
+  }
 
-    lite_component("dtbschedmgr") {
-        features = [
-            ":dmslite",
-        ]
-    }
+  lite_component("dtbschedmgr") {
+    features = [ ":dmslite" ]
+  }
 
-    generate_notice_file("dtbschedmgr_notice_file") {
-        module_name = "dtbschedmgr"
-        module_source_dir_list = [
-            "//third_party/bounds_checking_function",
-            "//third_party/cJSON",
-        ]
-    }
+  generate_notice_file("dtbschedmgr_notice_file") {
+    module_name = "dtbschedmgr"
+    module_source_dir_list = [
+      "//third_party/bounds_checking_function",
+      "//third_party/cJSON",
+    ]
+  }
 }
