--- a/BUILD.gn
+++ b/BUILD.gn
@@ -26,17 +26,20 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
     ]
 
     sources = [
-      "source/distributed_schedule_service.c",
+      "source/adapter/dms/dmslite_famgr.c",
+      "source/adapter/softbus/dmslite_session.c",
       "source/dmslite.c",
-      "source/dmslite_check_remote_permission.c",
-      "source/dmslite_famgr.c",
-      "source/dmslite_msg_parser.c",
-      "source/dmslite_session.c",
+      "source/dmslite_feature.c",
+      "source/dmslite_msg_handler.c",
+      "source/dmslite_pack.c",
+      "source/dmslite_parser.c",
+      "source/dmslite_permission.c",
       "source/dmslite_tlv_common.c",
     ]
 
     include_dirs = [
       "include",
+      "interfaces/innerkits",
       "//foundation/distributedschedule/samgr_lite/interfaces/innerkits",
       "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
       "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
@@ -47,6 +50,8 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
       "${aafwk_lite_path}/interfaces/kits/want_lite",
       "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
       "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",
+      "//foundation/communication/softbus_lite_new/interfaces/kits/bus_center",
+      "//foundation/communication/softbus_lite_new/interfaces/kits/common",
       "//kernel/liteos_a/kernel/include",
       "//kernel/liteos_a/kernel/common",
       "//third_party/bounds_checking_function/include",
