--- a/BUILD.gn
+++ b/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/lite/config/component/lite_component.gni")
+import("//build/lite/config/subsystem/aafwk/path.gni")
 
 if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
   lite_library("dmslite") {
@@ -26,34 +27,31 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
     ]
 
     sources = [
-      "source/adapter/dms/dmslite_famgr.c",
-      "source/adapter/softbus/dmslite_session.c",
       "source/dmslite.c",
+      "source/dmslite_famgr.c",
       "source/dmslite_feature.c",
       "source/dmslite_msg_handler.c",
       "source/dmslite_pack.c",
       "source/dmslite_parser.c",
       "source/dmslite_permission.c",
+      "source/dmslite_session.c",
       "source/dmslite_tlv_common.c",
     ]
 
     include_dirs = [
       "include",
       "interfaces/innerkits",
-      "//foundation/distributedschedule/samgr_lite/interfaces/innerkits",
-      "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
       "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
-      "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
-      "//foundation/communication/softbus_lite/interfaces/kits/transport",
-      "//foundation/communication/softbus_lite/interfaces/kits/discovery",
       "${aafwk_lite_path}/interfaces/kits/ability_lite",
       "${aafwk_lite_path}/interfaces/kits/want_lite",
       "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
       "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",
-      "//foundation/communication/softbus_lite_new/interfaces/kits/bus_center",
-      "//foundation/communication/softbus_lite_new/interfaces/kits/common",
-      "//kernel/liteos_a/kernel/include",
-      "//kernel/liteos_a/kernel/common",
+      "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
+      "//foundation/communication/dsoftbus/interfaces/kits/common",
+      "//foundation/communication/dsoftbus/interfaces/kits/transport",
+      "//foundation/distributedschedule/samgr_lite/interfaces/innerkits",
+      "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
+      "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
       "//third_party/bounds_checking_function/include",
       "//third_party/cJSON",
       "//utils/native/lite/include",
@@ -65,7 +63,7 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
       "${aafwk_lite_path}/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
       "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
       "//base/security/huks/frameworks/huks_lite/source:huks",
-      "//foundation/communication/softbus_lite:softbus",
+      "//foundation/communication/dsoftbus/sdk:softbus_client",
       "//foundation/distributedschedule/samgr_lite/samgr:samgr",
       "//third_party/bounds_checking_function:libsec_shared",
     ]
