--- a/moduletest/dtbschedmgr_lite/BUILD.gn
+++ b/moduletest/dtbschedmgr_lite/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/lite/config/test.gni")
+import("//build/lite/config/subsystem/aafwk/path.gni")
 
 if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
   # feature: distributed_schedule_test_dms
@@ -20,7 +21,14 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
     sources = [
       "source/famgr_test.cpp",
       "source/permission_test.cpp",
-      "source/tlv_parse_test.cpp"
+      "source/tlv_parse_test.cpp",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_famgr.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_msg_handler.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_pack.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_parser.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_permission.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_session.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_tlv_common.c"
     ]
 
     defines = [
@@ -29,21 +37,24 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
     ]
 
     include_dirs = [
-      "//foundation/distributedschedule/dmsfwk_lite/include",
-      "//foundation/distributedschedule/dmsfwk_lite/interfaces/innerkits",
       "${aafwk_lite_path}/interfaces/kits/ability_lite",
       "${aafwk_lite_path}/interfaces/kits/want_lite",
       "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
-      "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",    
+      "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",
+      "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
+      "//foundation/communication/dsoftbus/interfaces/kits/common",
+      "//foundation/communication/dsoftbus/interfaces/kits/transport",
+      "//foundation/distributedschedule/dmsfwk_lite/include",
+      "//foundation/distributedschedule/dmsfwk_lite/interfaces/innerkits"
     ]
 
     deps = [
       "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
       "//foundation/communication/ipc_lite:liteipc_adapter",
-      "//foundation/distributedschedule/dmsfwk_lite:dtbschedmgr",
       "//foundation/distributedschedule/samgr_lite/samgr:samgr",
       "${aafwk_lite_path}/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
       "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
+      "//foundation/communication/dsoftbus/sdk:softbus_client"
     ]
 
     output_dir = "$root_out_dir/test/unittest/distributedschedule"
