--- a/moduletest/dtbschedmgr_lite/BUILD.gn
+++ b/moduletest/dtbschedmgr_lite/BUILD.gn
@@ -28,7 +28,8 @@ if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
       "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_parser.c",
       "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_permission.c",
       "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_session.c",
-      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_tlv_common.c"
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_tlv_common.c",
+      "//foundation/distributedschedule/dmsfwk_lite/source/dmslite_feature.c"
     ]
 
     defines = [
